test(android): Fix screenshots for Android API 26
Keep API 26/27 test screenshots free of the "System UI has stopped"
crash dialog, and make runShellCommand able to read command output.

The headless (-no-window) Oreo emulator SystemUI has a null
NavigationBarFragment and crashes in onKeyguardOccludedChanged on the
keyguard-occluded transition every Activity launch triggers. The crash
is an AOSP image bug, unfixable from the app and cosmetic (the render
still finishes and the focus-free harness reads view fields directly),
but its dialog paints over the captured screenshot.

Two-part fix:

- Stop provoking the crash: drop FLAG_SHOW_WHEN_LOCKED and the
  `wm dismiss-keyguard` path (dismissSystemWindows) so no test pokes the
  keyguard-occluded transition. Focus still comes from requestFocus() +
  forceWindowFocusViaTap; FLAG_DISMISS_KEYGUARD stays for slow APIs.

- Clear any dialog that still slips through, at capture time: before the
  screencap on API 26/27 only, if `dumpsys window windows` shows the
  focused "Application Error" window, press KEYCODE_DPAD_CENTER to
  activate its "Close app" button. The dialog is an AppErrorDialog owned
  by system_server, so pm disable / am force-stop of the systemui package
  and hide_error_dialogs (honored only from API 30) do not close it. The
  focus check is required so the key never hits an app button or exits the
  Activity.

To read that dumpsys output, runShellCommand now returns stdout (merged
with stderr via 2>&1, except for screencap), fixes the byte-count bug in
the EOF drain loop, and on API < 21 runs the command through
`/system/bin/sh -c` so redirection works.